--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="google-site-verification" content="iarPRCHfrV63ce01k2-TYb9Hm6gDGEZaS7lmQpy3AUY" />	  
 <meta http-equiv="Accept-CH" content="Sec-CH-UA-Platform-Version, Sec-CH-UA-Model" />
 <link rel="icon" type="image/x-icon" href="https://i.imgur.com/oX2tvdy.png"/>
-<link rel="amphtml" href="http://pencaripetir.xyz/maskoolin/jpslot">
+<link rel="amphtml" href="https://pencaripetir.xyz/zenoh/jpslot">
 <meta name="keywords" content="Jpslot, daftar Jpslot, slot Jpslot, situs Jpslot, login Jpslot, link alternatif Jpslot, link Jpslot, situs Jpslot, slot gacor maxwin, link slot gacor">	  
 <link rel="canonical" href="http://jpslot.resmi.zenoh.io/"/>
 <meta name="robots" content="index, follow">	  
